v0.0.7/_sources/autoapi/dialoguekit/participant/user/index.rst.txt
:py:mod:`dialoguekit.participant.user`
======================================

.. py:module:: dialoguekit.participant.user

.. autoapi-nested-parse::

   Abstract representation of core user-related data and functionality.

   For communicating with an agent, the specific user instance needs to be
   connected with a DialogueConnector by invoking
   `register_dialogue_connector()`.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   dialoguekit.participant.user.UserType
   dialoguekit.participant.user.User




.. py:class:: UserType

   Bases: :py:obj:`enum.Enum`

   Represents different types of users (humans vs simulated users).

   .. py:attribute:: HUMAN
      :value: 0

      

   .. py:attribute:: SIMULATOR
      :value: 1

      


.. py:class:: User(id: str, user_type: UserType = UserType.HUMAN)

   Bases: :py:obj:`dialoguekit.participant.participant.Participant`

   Represents a user.

   :param id: User ID.
   :param user_type: User type (default: HUMAN).

   .. py:method:: receive_utterance(utterance: dialoguekit.core.utterance.Utterance) -> None

      Gets called every time there is a new agent utterance.

      :param utterance: Agent utterance.



